src/objects/UC_Project__c.object
<CustomObject>
    <fields>
        <fullName>Group__c</fullName>
        <description>Created for case 296465</description>
        <formula>Universal_Code__r.Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <description>created for case 296465</description>
        <formula>Universal_Code__r.Item_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Codes</relationshipLabel>
        <relationshipName>UC_Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Universal_Code__c</fullName>
        <label>Universal Code</label>
        <referenceTo>Universal_Code__c</referenceTo>
        <relationshipLabel>UC Projects</relationshipLabel>
        <relationshipName>UC_Projects</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>UC Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UC Proj-{0000000}</displayFormat>
        <label>UC Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UC Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>